# optiviz

./: LICENSE.txt  README.md  pyproject.toml
optiviz/: __init__.py  optimise.py  visualise.py
tests/: tests_1d.py  tests_2d.py  tests_ols.py
